	PR libgcj/4105: 	* java/lang/natClass.cc (findInnerClassAttribute): New method. 	(findDeclaredClasses): Likewise. 	(getDeclaredClasses): Implemented. 	(getDeclaringClass): Likewise. 	(isAnonymousClass): Likewise. 	(isMemberClass): Likewise. 	(check_constant): Pass message in exception.  Allow resolved 	constants. 	(resolve_class_constant): New function. 	* defineclass.cc (read_one_class_attribute): Handle InnerClasses. 	* java/lang/Class.h (isAnonymousClass, isLocalClass, 	isMemberClass): Declare. 	* java/lang/Class.java (getSimpleName): Implemented. 	(isAnonymousClass, isLocalClass, isMemberClass): New methods.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcj-eclipse@115657 138bc75d-0d04-0410-961f-82ee72b054a4